<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/autoservice">

    <TextView
        android:id="@+id/signin-text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="200dp"
        android:text="@string/enter_number_Text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signin-text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/after_SMS_send"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/signin-edit-text1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/signin-text1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/editshape1"
        android:hint="e.g. +98 912 123 45 69"
        android:inputType="phone"
        android:maxLength="13"
        android:padding="7dp"
        android:textAlignment="center"
        android:textColor="@color/Appdarkgrey"
        android:textStyle="bold"
        android:imeOptions="actionSend"
        />

    <EditText
        android:id="@+id/signin-edit-text2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/signin-text2"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/editshape1"
        android:inputType="phone"
        android:maxLength="11"
        android:padding="7dp"
        android:textAlignment="center"
        android:textColor="@color/Appdarkgrey"
        android:textStyle="bold"
        android:visibility="gone"
        android:imeOptions="actionDone"
        />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin-edit-text1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/send_sms_button"
        android:textColor="@color/AppWhite" />

    <Button
        android:id="@+id/enter_code_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin-edit-text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/sign_in"
        android:textColor="@color/AppWhite"
        android:visibility="gone" />

    <TextView
        android:id="@+id/retry_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_code_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:maxLines="2"
        android:text="@string/retry_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="gone" />

</RelativeLayout>