<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOceanLight">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/Appdarkgrey"
        android:text="@string/profile_info"
        android:textAlignment="center"
        android:textColor="@color/AppWhite"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:padding="10dp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/AppWhite"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editprofile_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="@drawable/editshape1"
            android:hint="e.g. Alborz"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:textColor="@color/Appdarkgrey"
            android:textColorHint="@color/Appdarkgreytrans"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:text="@string/surname"
            android:textAlignment="center"
            android:textColor="@color/AppWhite"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editprofile_surname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="@drawable/editshape1"
            android:hint="e.g. NajmAbadi"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:textColor="@color/Appdarkgrey"
            android:textColorHint="@color/Appdarkgreytrans"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/AppWhite"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editprofile_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="@drawable/editshape1"
            android:hint="e.g. A.najmabadi@gmail.com"
            android:padding="5dp"
            android:imeOptions="actionNext"
            android:textColor="@color/Appdarkgrey"
            android:textColorHint="@color/Appdarkgreytrans"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:text="@string/Phone"
            android:textAlignment="center"
            android:textColor="@color/AppWhite"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editprofile_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="@drawable/editshape1"
            android:hint="e.g. +98 912 123 45 67"
            android:padding="10dp"
            android:imeOptions="actionDone"
            android:textIsSelectable="false"
            android:focusable="false"
            android:textColor="@color/Appdarkgrey"
            android:textColorHint="@color/Appdarkgreytrans"
            />
        <Button
            android:id="@+id/profile_save_btn"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:background="@drawable/button2"
            android:textColor="@color/colorPrimary"
            android:text="@string/save"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</FrameLayout>