<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/single_car_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingBottom="@dimen/row_padding_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/row_padding_vertical">

        <TextView
            android:id="@+id/car-id"
            android:layout_width="137dp"
            android:layout_height="40dp"
            android:background="@drawable/carlicenseplate"
            android:gravity="center_vertical"
            android:paddingEnd="2dp"
            android:paddingStart="25dp"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/car_image"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:scaleType="fitCenter"
            android:src="@drawable/car_thumbnail" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/AVLoadingItem"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:textAlignment="center"
            android:visibility="visible"
            app:indicatorColor="#ff3535"
            app:indicatorName="BallScaleIndicator" />

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/car-id"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/car_model"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/car_model2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/AppWhite"
                android:padding="3dp"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/car_kilometer"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/car_kilometer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@color/AppWhite"
                android:padding="3dp"

                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/monthly_usage"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/car_usage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/AppWhite"
                android:padding="3dp"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>